[project]
name = "gendepin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=1.26.3",
    "pandas>=2.2.3",
    "radcad>=0.14.0",
    "seaborn>=0.13.2",
    "streamlit>=1.42.0",
    "typing-extensions>=4.12.2",
]
